# data-projects

./: .gitignore  .pre-commit-config.yaml  README.md  pr-template.yaml  pull_request_template.md
.github/: pre-commit.yaml
.github/workflows/: combined-pipeline.yml  pre-commit.yaml  verify-query-logic.yaml
ae-projects/01_mock_ae_interview/: readme.md
async-projects/: readme.md
async-projects/01-end-to-end-analytics-with-dbt-and-looker/: Orders.xls  People.xls  Returns.xls  readme.md
async-projects/02-BI-admin-with-Tableau/: readme.md
async-projects/03-Open-Source-BI-with-Metabase/: readme.md
async-projects/04-azure-data-warehouse/: readme.md
async-projects/05-getting-started-with-databricks/: readme.md
async-projects/06-data-ingestion-patterns/: readme.md
async-projects/data-streaming-mastery/: README.md  SETUP.md  docker-compose.yml
bi-projects/: readme.md
bi-projects/01_bi_dashboard_with_microsoft_fabric/: readme.md
bi-projects/02_looker_snowflake/: readme.md
dataops-projects/01_git_and_ci_cd/: .pre-commit-config.yaml  makefile  readme.md
dataops-projects/02_terraform_101/: Makefile  README.md  outputs.tf  providers.tf  terraform.tfvars.example
de-projects/: readme.md
de-projects/01_azure_databricks_vnet_ssc/: readme.md
de-projects/02_dbt_core_snowflake/: readme.md
de-projects/03_snowflake_hex/: readme.md
de-projects/04_docker_in_azure/: README.md
de-projects/05_trinodb/: readme.md
de-projects/06_soda_core_snowflake/: readme.md
de-projects/08_db_to_db_python/: readme.md  (+2 more)
de-projects/17_polars_into/: pyproject.toml  readme.md
(+352 files in other folders)
